Fixes the margin on the benefits list photo; and aligns content in the vertical center

--- a/src/scss/04-layouts/_content-row.scss
+++ b/src/scss/04-layouts/_content-row.scss
@@ -23,9 +23,10 @@
   @include mx.for-size("tablet-landscape-up") {
     justify-content: space-around;
     flex-flow: row wrap;
+    align-items: center;
 
     &__image {
-      margin-right: 2rem;
+      margin-right: 4rem;
       flex: 0 1;
     }
   }
